--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,69 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+.board{ 
+display: inline-block;
+height: 50%;
+width: 50%;
+ }
+
+ .card{
+float: left;
+margin: 8%;
+height: 200px;
+width: 150px;
+border-style: solid;
+border-color: rgba(0,0,0,1);
+border-width: 1px;
+background-color: rgba(254,254,133,1);
+border-radius: 10px;
+ }
+
+ nav{
+ 	background-color: #808080;
+ }
+
+ .clearfix:after {
+        visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+        font-size: 0;
+      }
+
+
+ a{
+
+ 	background-color: #ffbf00;
+ 	color: white;
+ 	padding: 35px;
+ 	dislay: block;
+ 	float: left;
+
+ }
+
+ a:hover{
+ 	background-color: #ee5f3c;
+ } 
+
+ span.name{
+ 	color: #ff0000;
+ } 
+
+ h1{
+
+ 	color: rgb(2,132,130);
+ }
+
+ h2{
+
+ 	color: #ffd700;
+ }
+
+ body{
+
+ 	text-align: center;
+ }
+
+footer{
+background-color: #808080;
+
+ }
